@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-09T16:35:29Z",
-  "count_outdated" : 444,
-  "uniques_outdated" : 245,
-  "count" : 474,
-  "uniques" : 266,
+  "timestamp" : "2022-05-10T01:37:55Z",
+  "count_outdated" : 446,
+  "uniques_outdated" : 247,
+  "count" : 476,
+  "uniques" : 267,
   "clones" : [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-04-28T00:00:00Z",
       "count": 1,
@@ -63,8 +56,8 @@
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
