@@ -3,11 +3,6 @@
   "uniques": 13,
   "clones": [
     {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-04-28T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -44,7 +39,7 @@
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
